Moved around with margins to make sure they collapse when the install button is hidden

--- a/core/app/assets/stylesheets/base/header.scss
+++ b/core/app/assets/stylesheets/base/header.scss
@@ -47,6 +47,7 @@ body.controller_home.action_index {
 
 .header-tagline {
   margin-top: 25px;
+  margin-bottom: 30px;
   color: #c9dcfb;
   font-weight: 100;
   font-size: 18px;
