--- a/core/app/assets/stylesheets/pages/in-your-browser.scss
+++ b/core/app/assets/stylesheets/pages/in-your-browser.scss
@@ -1,10 +1,6 @@
 .in-your-browser-header {
-  padding: 40px 0; // keep in sync with publisher landing page
+  margin: 40px 0; // keep in sync with publisher landing page
   text-align: center;
-}
-
-.in-your-browser-header-button {
-  margin-top: 30px;
 }
 
 .in-your-browser-horizontal {
