--- a/core/app/assets/stylesheets/pages/on-your-site.scss
+++ b/core/app/assets/stylesheets/pages/on-your-site.scss
@@ -6,7 +6,7 @@
 }
 
 .on-your-site-header {
-  padding: 61px 0px; // keep in sync with landing page
+  margin: 61px 0px; // keep in sync with landing page
   text-align: center;
 }
 
